<resources>
    <string name="app_name">NewCoffeePuzzle</string>
    <string name="title_activity_maps">Map</string>
    <string name="member_info">會員資料</string>
    <string name="tv_memName">會員名稱</string>
    <string name="tv_memMail">會員信箱</string>
    <string name="activities">瀏覽活動清單</string>


    <string name="store_home">主頁</string>>
    <string name="take_orders">外帶訂單</string>
    <string name="outbound_orders">外送訂單</string>
    <string name="delivery">外送確認</string>
    <string name="spndcoffeelist_inser">新增寄杯訂單</string>
    <string name="spndcoffeelist">寄杯訂單</string>
    <string name="out">登出</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Login_null">帳號或密碼錯誤</string>
    <string name="QRin">領杯掃描</string>
    <string name="QR_OK">領杯成功</string>
    <string name="delivery_OK">領取成功</string>
    <string name="spndcoffeQR">新增寄杯訂單</string>
    <string name="inser_ok">新增會員成功</string>

</resources>
